--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>ups923@gmail.com</title>
+    <title>tentempié | Restaurante en casa </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
 
@@ -54,7 +54,7 @@
 </head>
 <body>
     <h1>Website en desarrollo</h1>
-    <p>DEV: ups923@gmail.com</p>
+    <p>Tentempié | Restaurante en casa </p>
 </body>
 </html>
 
