--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         <div class="qt-box qt-background">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 ml-auto mr-auto text-center">
-                        <p class="lead ">
+                    <div style="background: #f5fffb24; border-radius: 29px;" class="col-md-8 ml-auto mr-auto text-center">
+                        <p class="lead" style="padding: 20px;" >
                             " Nuestra mejor recompensa, es la satisfacción y las sonrisas que nos regalan nuestros clientes, 
                             al brindarnos el placer de incluirnos en ese importante momento de sus vidas. "
                         </p>
